--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/core": "^5.0.0-beta.5",
     "next": "^11.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.43.2"
   }
 }
